--- a/view/home/index_students.html
+++ b/view/home/index_students.html
@@ -20,7 +20,7 @@
     <div class="am-g" style="margin: 20px 0px;">
         <div class="am-u-sm-12">
           <label>
-            ［<%=semester%>］签到信息
+            【<%=semester%>】签到信息
           </label>
         </div>
         <div class="am-u-sm-12">
